Add new products section for displaying products

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fukuya Japanese Food</title>
+    <title>Pan Asian Pantry</title>
 
     <!-- link to css -->
     <link rel="stylesheet" href="./css/Header.css">
+    <link rel="stylesheet" href="./css/products.css">
+
+    <!-- icon cdn -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css">
+
 
 
 </head>
@@ -47,7 +52,7 @@
     </section>
 
     <!--Read with javascript local json file  -->
-    <section class="products">
+    <section class="products-container">
 
 
     </section>
