Added the search bar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous">
 
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
  <!-- Body Starts -->
@@ -58,7 +60,11 @@
         <!-- icons -->
         <div class="icons">
 
-            <a href="#search"><img src="./assets/icons/icons8-search-30.png" alt="Search"></a>
+            
+     
+            <a href="#search"><img src="./assets/icons/icons8-search-30.png" alt="Search" id="toggle-search"></a>
+            <!-- search bar -->
+            <input id='searchBar' name='search' type='search' placeholder='Search&hellip;'>
             <a href="#account"><img src="./assets/icons/icons8-account-30.png" alt="Account"></a>
             <a href="#cart"><img src="./assets/icons/icons8-shopping-bag-30.png" alt="Cart"></a>
 
