Added Search Bar

--- a/index.html
+++ b/index.html
@@ -80,7 +80,15 @@
 
     <!--Read with javascript local json file  -->
     <section class="products-container">
-
+        <!-- <div class="product">
+            <img src="${item.img}" alt="${item.product_name}">
+            <p class="title">${item.product_name}</p>
+            <p class="price">
+                <span>$${item.price}</span>
+                <span>${item.currency}</span>
+            </p>
+            <p class="cart">Add to cart <i class="ri-shopping-cart-line"></i></p>
+        </div> -->
 
     </section>
     
