filter and footer etc

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
    
     <!--  mobile screen end -->
     <!-- header -->
-
+    <div class="alert alert-primary notification-container" id="alert" >
+        
+    </div>
 
             <!-- mobilr screen end -->
     <header class="header-container">
@@ -64,9 +66,9 @@
                 <li class="nav-item home"><a href="/">Home</a></li>
                 <li class="nav-item dropdown"><a href="#menu">Our Menu</a>
                     <div class="dropdown-content">
-                        <a href="#">Seafood</a>
-                        <a href="#">Vegetable</a>
-                        <a href="#">Dessert</a>
+                        <a href="#" class="filter" id="seafood">Seafood</a>
+                        <a href="#" class="filter" id="vegetable">Vegetable</a>
+                        <a href="#" class="filter" id="dessert">Dessert</a>
                     </div>
                 </li>
                 <!-- <li class="nav-item"><a href="#delivery">Delivery / Calendar</a></li> -->
@@ -145,7 +147,7 @@
 
 
     <!-- footer -->
-    <div class="custom-footer-container my-5">
+    <div class="custom-footer-container">
         <footer class="footer text-center">
           <div class="social-buttons">
             <a href="https://facebook.com" class="social-button facebook">
@@ -173,8 +175,6 @@
 
 <script  type="module" src="./script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
-<script src="./script.js"></script>
 <script src="./load.js"></script>
 </body>
 </html>
