added the linked of menu

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             
             <ul class="nav-list">
                 <li class="nav-item home"><a href="/">Home</a></li>
-                <li class="nav-item dropdown"><a href="#menu">Our Menu</a>
+                <li class="nav-item dropdown"><a href="./index.html">Our Menu</a>
                     <div class="dropdown-content">
                         <a href="#" class="filter" id="seafood">Seafood</a>
                         <a href="#" class="filter" id="vegetable">Vegetable</a>
